@@ -155,6 +155,9 @@ Bug Fixes
 * SOLR-6159: A ZooKeeper session expiry during setup can keep LeaderElector from joining elections.
   (Steven Bower, shalin)
 
+* SOLR-6223: SearchComponents may throw NPE when using shards.tolerant and there is a failure
+  in the 'GET_FIELDS/GET_HIGHLIGHTS/GET_DEBUG' phase. (Tomás Fernández Löbbe via shalin)
+
 Other Changes
 ---------------------
 
